fixed css scroll bug on main app view. Landing page still has unecessary overflow

--- a/public/components/lp-app/lp-app.css
+++ b/public/components/lp-app/lp-app.css
@@ -1,6 +1,6 @@
 :host {
   display: block;
-  height: 100%;
+  max-height: 100%;
 }
 
 core-animated-pages {
