--- a/public/components/lp-page-landing/lp-page-landing.css
+++ b/public/components/lp-page-landing/lp-page-landing.css
@@ -4,6 +4,12 @@
 
 .landing-content {
 	width: 100%;
+	/*
+	 * don't allow the content height to exceed the full
+	 * height of the viewport (-64px accounts for static header)
+	 * calc(100% - 64px);
+	 **/
+	max-height: 100%;
 }
 
 .leadCopy {
